--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -44,7 +44,7 @@ layout: default
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
-<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 <script src="/assets/js/validation.js"></script>
 
 <style>
