--- a/_layouts/pass.html
+++ b/_layouts/pass.html
@@ -16,7 +16,7 @@ layout: default
         id="staticrypt-password"
         type="password"
         name="password"
-        placeholder="passphrase"
+        placeholder="hash"
         autofocus
       />
 
@@ -26,6 +26,89 @@ layout: default
 </div>
 
 {crypto_tag}
+
+<style>
+  .staticrypt-hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eee;
+  }
+
+  .staticrypt-page {
+    width: 360px;
+    padding: 8% 0 0;
+    margin: auto;
+    box-sizing: border-box;
+  }
+
+  .staticrypt-form {
+    position: relative;
+    z-index: 1;
+    color: black;
+    background: #ffffff;
+    max-width: 360px;
+    margin: 0 auto 100px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  }
+
+  .staticrypt-form input {
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+  }
+
+  .staticrypt-form .staticrypt-decrypt-button {
+    text-transform: uppercase;
+    outline: 0;
+    background: #4caf50;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #ffffff;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  .staticrypt-form .staticrypt-decrypt-button:hover,
+  .staticrypt-form .staticrypt-decrypt-button:active,
+  .staticrypt-form .staticrypt-decrypt-button:focus {
+    background: #43a047;
+  }
+
+  .staticrypt-html {
+    height: 100%;
+  }
+
+  .staticrypt-body {
+    margin-bottom: 1em;
+    background: #76b852; /* fallback for old browsers */
+    background: -webkit-linear-gradient(right, #76b852, #8dc26f);
+    background: -moz-linear-gradient(right, #76b852, #8dc26f);
+    background: -o-linear-gradient(right, #76b852, #8dc26f);
+    background: linear-gradient(to left, #76b852, #8dc26f);
+    font-family: "Arial", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  .staticrypt-instructions {
+    margin-top: -1em;
+    margin-bottom: 1em;
+  }
+
+  .staticrypt-title {
+    font-size: 1.5em;
+    color: black;
+  }
+</style>
 
 <script>
   var favoritemovie = localStorage.getItem("lastname");
