--- a/_layouts/encrypted_post.html
+++ b/_layouts/encrypted_post.html
@@ -4,14 +4,10 @@ layout: index
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset="UTF-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-      <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
 
 {% seo %}
   </head>
@@ -22,58 +18,16 @@ layout: index
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>  
-        <div id="info">
- <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-          <div id="info1" >
-            <a href="/Contact/contact.html">contact</a>
-
-          <div class="header__info">
-
-            <div class="container__info">
-
-              <nav class="nav">
-          
-          <div class="hamburger-menu">
-             <a class="fas info" >Info</a> 
-            <i class="fas fa-times"></i>
-          </div>
-          <ul class="nav-list">
-            <h1>About</h1>
-            <div class="container">
-<p>Hacker Blogs is one of the Information security blogs covering security domains.
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-  dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-  It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-  It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-  and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            
-
-
-            </div>
-
-            
-          </ul>
-        </nav>
-            </div>
-          </div>
-          </div>
-        </div>
-       
+          <h2>{{ page.description }}</h2>
+        </a>
+        
 
         <section id="downloads">
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          {% if page.pdf_url %}
-          {% if page.publish %}
-
-          <a href="{{ page.pdf_url }}" class="btn btn-github"><span class="icon"></span>View as Pdf</a>
-          {% endif %}
-          
-          {% endif %}
-        
+          <a href="{{ '/' | relative_url }}" class="btn btn-github"><span class="icon"></span>View Home</a>
           
         </section>
       </div>
@@ -95,127 +49,5 @@ layout: index
         ga('send', 'pageview');
       </script>
     {% endif %}
-    
-    {% if site.contact%}
-    <h1>Contact</h1>
-    {% endif %}
   </body>
-  <style type="text/css">
-#info{
-  display: flex;
-  justify-content: space-between;
-  }
-#info1{
-  display: flex;
-  justify-content: space-between;
-  }
-#info1 a{
-  font-weight: 300;
-}
-.container__info {
-  width: 100%;
-  max-width: 120rem;
-  padding: 0 1.5rem;
-  margin: 0 auto;
-}
-.nav-list p {
-    margin: 0;
-    margin-block-start: 0;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: -2.3em;
-    margin-inline-end: 5px; 
-}
-.hamburger-menu {
-  color: #fff;
-  cursor: pointer;
-  position: relative;
-  z-index: 1500;
-}
-.hamburger-menu .info{
-  font-size: 16px;
-  text-decoration: underline;
-}
-.hamburger-menu .fa-times{
-  font-size: 2.8rem;
-  position: fixed;
-}
-
-.hamburger-menu .fa-times {
-  display: none;
-}
-.nav-open .hamburger-menu .fa-times {
-  display: block;
-}
-.nav-open .hamburger-menu .info{
-  display: none;
-}
-.nav-list {
-  position: fixed;
-  top: 0;
-  left: -13px;
-  width: 100%;
-  height: 100vh;
-  background-color: #1A1A1A;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 1400;
-  opacity: 0;
-  transform: scale(0);
-  transition: opacity 0.5s;
-}
-.nav-open .nav-list {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.nav-item:not(:last-child) {
-  margin-bottom: 0.5rem;
-}
-
-.nav-link {
-  display: block;
-  color: #fff;
-  font-size: 3rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  padding: 1rem;
-}
-.info{
-  cursor: pointer;
-}
-@media screen and (max-width: 768px) {
-header h2 {
-
-    display: none;
-}
-#info{
-  justify-content: center;
-}
-.fa-times{
-  position: fixed;
-    top: 60px;
-    right: 18px;
-}
-}
-</style>
-<script>
-//Selectors
-let header = document.querySelector(".header__info");
-let info = document.querySelector(".hamburger-menu");
-
-
-
-info.addEventListener("click", function () {
-  header.classList.toggle("nav-open");
-});
-
-
-</script>
-
-
 </html>
